k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gnosis-api
  namespace: gnosis-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: "50.47.147.161"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.middlewares: gnosis-api-gnosis-api-rate-limit@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.gnosistools.com
      secretName: gnosis-api-tls
  rules:
    - host: api.gnosistools.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gnosis-api
                port:
                  number: 80
